# positionning-circle-from-stereocam

./: CMakeLists.txt  README.md  main_demo.cpp
include/: base_circle_solver.h  camera_model.h  circle_model.h  precise_circle_solver.h  rough_circle_solver.h  track_bar.h
src/: analyse.txt  analyse_2.txt  rough_circle_solver.cpp
symbol_inference/: symbol_inference.ipynb
